[package]
name = "limonite"
version = "0.0.0"
authors = ["Douglas Campos <qmx@qmx.me>"]
description = "small blog generator"
license = "Apache-2.0"
homepage = "https://github.com/qmx/limonite"

[dependencies]
liquid = "0.1.2"
pulldown-cmark = "0.0.3"
yaml-rust = "0.2.2"
uuid = "0.1.18"
regex = "0.1.41"
rust-crypto = "0.2.34"
