[package]
name = "limonite"
version = "0.0.5"
authors = ["Douglas Campos <qmx@qmx.me>"]
description = "small blog generator"
license = "Apache-2.0"
homepage = "https://github.com/qmx/limonite"
build = "build.rs"

[build-dependencies]
git2 = "0.3"

[dependencies]
liquid = "0.2.0"
pulldown-cmark = "0.0.3"
yaml-rust = "0.2.2"
uuid = "0.1.18"
regex = "0.1.41"
rust-crypto = "0.2.34"
clap = "1.5.5"
